# Windows12

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_corepc.yml  shellhost_ci.yml
docs/: ARCHITECTURE.md  NUPS_SPECIFICATION.md  TIME_TRAVEL_ENGINE.md  UI_GUIDELINES.md
src/CorePC/: CMakeLists.txt
src/CorePC/DevWorkspaceMode/: DevModeToggle.cpp  DevModeToggle.h  KernelProfilerHooks.cpp  ServiceSuspender.cpp  TelemetrySuppresor.cpp
src/CorePC/PackageUnified/: DependencyResolver.cpp  LinuxBinLayer.cpp  NUPS_Manager.cpp  NUPS_Manager.h  UWPContainer.cpp  Win32Bridge.cpp
src/CorePC/TimeTravelEngine/: DeltaStroageLayer.cpp  RollbackController.cpp  SnapshotDaemon.cpp  SnapshotDaemon.h  StateTracker.cpp
src/LocalAI_NPU/: CMakeLists.txt  CopilotShellHook.cpp  NPU_InferenceLayer.cpp
src/OOBE/: BloatFreeConfig.json  BrowserSelectDialog.xaml  CMakeLists.cmake  CMakeLists.txt  InstallerMain.xaml  InstallerMain.xaml.cs  SetupOrchestrator.cpp
src/ShellHost/: CMakeLists.txt  ShellHostMain.cpp
src/ShellHost/Compositor/: AnimationController.cpp  CompositorEngine.cpp  CompositorEngine.h  GlassMicaEngine.cpp  SunsetGradientRenderer.cpp
src/ShellHost/RetroShell/: AeroGlassSimulator.cpp  LegacyThemeEngine.cpp  RetroShellManager.cpp  RetroShellManager.h  SkinMapping.cpp  XPSkinMapper.cpp
src/ShellHost/WindowManager/: FloatingContainer.cpp  ModularSnap.cpp  WindowLayout.cpp  WindowManager.cpp  WindowManager.h
src/UI_Components/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  UI_Components.csproj
src/UI_Components/StartMenu/: StartMenu.xaml  StartMenu.xaml.cs
src/UI_Components/Styles/: ThemeResources.xaml
src/UI_Components/TaskbarFloat/: DynamicDock.cs  Taskbar.xaml  Taskbar.xaml.cs
src/UI_Components/Themes/: DarkModeOverride.xaml  SunsetDefault.xaml  ThemeDictionary.xaml
src/UI_Components/Views/: TaskbarView.xaml  TaskbarView.xaml.cs  WorkspaceView.xaml  WorkspaceView.xaml.cs
src/UI_Components/Widgets/: UnanchoredBlock.cs  WidgetCanvas.xaml
tests/: CMakeLists.cmake  CMakeLists.txt
tests/CorePCTests/: TimeTravel_UnitTests.cpp
tests/PackageUnifiedTests/: CleanInstallTests.cpp
tests/UITests/: ComponentRenderTests.cs
tools/: StateDebugger.py  UI_Inspector.cpp
